Fixes gap in sidebar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 101%;
     padding: 0;
     margin: 0;
 }
@@ -66,7 +66,7 @@ div.content {margin-left: 0;}
     background-color: #070709;
     background-size: 100% 100%;
     font-size: 20px;
-    padding: 0px 10px;
+    padding: 0px 0px;
     flex-grow: 8;
   }
 
